Fix partners flex box on mobile

--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -7,3 +7,9 @@
 
   padding-block: 60px;
 }
+
+@media (max-width: 600px) {
+  .partners {
+    gap: 40px 20px;
+  }
+}
